--- a/ServerFlask/templates/index.html
+++ b/ServerFlask/templates/index.html
@@ -31,30 +31,29 @@
 
 							<ul class="actions stacked">
 								<li><a href="{{ url_for('login') }}" class="button large wide smooth-scroll-middle">LOGIN</a>
-								<a href="sign_up.html" class="button large wide smooth-scroll-middle">SIGN UP</a></li>
+								<li><a href="{{ url_for('sign_up') }}" class="button large wide smooth-scroll-middle">SIGN UP</a></li>
 							</ul>
 
 
 
 						</div>
 						<div class="image">
-							<img src="immagini/tende_homepage.jpg" alt="" />
+							<img src="{{ url_for('static', filename='assets/immagini/tende_homepage.jpg') }}" alt="" />
 						</div>
 					</section>
 
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+		<script src="{{ url_for('static', filename='assets/js/jquery.min.js') }}"></script>
+		<script src="{{ url_for('static', filename='assets/js/jquery.scrollex.min.js') }}"></script>
+		<script src="{{ url_for('static', filename='assets/js/jquery.scrolly.min.js') }}"></script>
+		<script src="{{ url_for('static', filename='assets/js/browser.min.js') }}"></script>
+		<script src="{{ url_for('static', filename='assets/js/breakpoints.min.js') }}"></script>
+		<script src="{{ url_for('static', filename='assets/js/util.js') }}"></script>
+		<script src="{{ url_for('static', filename='assets/js/main.js') }}"></script>
 		<!-- Note: Only needed for demo purposes. Delete for production sites. -->
-			<script src="assets/js/demo.js"></script>
-
+		<script src="{{ url_for('static', filename='assets/js/demo.js') }}"></script>
+	
 	</body>
 </html>
