--- a/ServerFlask/templates/index.html
+++ b/ServerFlask/templates/index.html
@@ -31,7 +31,7 @@
 
 							<ul class="actions stacked">
 								<li><a href="{{ url_for('login') }}" class="button large wide smooth-scroll-middle">LOGIN</a>
-								<a href="{{ url_for('sign_up') }}" class="button large wide smooth-scroll-middle">SIGN UP</a></li>
+								<!-- <a href="{{ url_for('sign_up') }}" class="button large wide smooth-scroll-middle">SIGN UP</a> --></li>
 							</ul>
 
 
