--- a/ServerFlask/templates/index.html
+++ b/ServerFlask/templates/index.html
@@ -30,8 +30,8 @@
 								all at the click of a button. </p>
 
 							<ul class="actions stacked">
-								<li><a href="{{ url_for('login') }}" class="button large wide smooth-scroll-middle">LOGIN</a></li>
-								<!-- <a href="{{ url_for('sign_up') }}" class="button large wide smooth-scroll-middle">SIGN UP</a> -->
+								<li><a href="{{ url_for('login') }}" class="button large wide smooth-scroll-middle">LOGIN</a>
+								<a href="{{ url_for('signup') }}" class="button large wide smooth-scroll-middle">SIGN UP</a> </li>
 							</ul>
 
 
