--- a/ServerFlask/templates/sign_up.html
+++ b/ServerFlask/templates/sign_up.html
@@ -41,7 +41,7 @@
 									<section id="contact">
 										<div class="content">
 											<section>
-												<form method="post" action="{{ url_for('sign_up') }}">
+												<form method="post" action="{{ url_for('signup') }}">
 													<div class="fields">
 
 														<!-- Campo email -->
