--- a/ServerFlask/templates/login.html
+++ b/ServerFlask/templates/login.html
@@ -36,7 +36,7 @@
                                 </form>
                                 {% with messages = get_flashed_messages(with_categories=true) %}
                                     {% if messages %}
-                                        <div id="error" style="color: red; font-size: 20px;">
+                                        <div id="error" style="color: red; font-size: 20px;position: absolute; top: 300px; left: 200px;">
                                             {% for category, message in messages %}
                                                 <p>{{ message }}</p>
                                             {% endfor %}
