--- a/ServerFlask/templates/login.html
+++ b/ServerFlask/templates/login.html
@@ -36,12 +36,12 @@
                                 </form>
                                 {% with messages = get_flashed_messages(with_categories=true) %}
                                     {% if messages %}
-                                        <div id="error" style="color: red; font-size: 30px;font-weight: bold;position: relative; top: -100px; left: 350px;">
+                                        <div id="error" style="color: red; font-size: 20px;font-weight: bold;position: relative; top: -90px; left: 350px;">
                                             {% for category, message in messages %}
                                                 <p>{{ message }}</p>
                                             {% endfor %}
                                         </div>
-                                        <audio id="errorSound" src="sounds/notify.mp3" preload="auto"></audio>
+                                        <audio id="errorSound" src="/sounds/notify.mp3" preload="auto"></audio>
                                         <script>
                                             document.getElementById('errorSound').play();
                                         </script>
