--- a/ServerFlask/templates/login.html
+++ b/ServerFlask/templates/login.html
@@ -41,7 +41,7 @@
                                                 <p>{{ message }}</p>
                                             {% endfor %}
                                         </div>
-                                        <audio id="errorSound" src="/sounds/notify.mp3" preload="auto"></audio>
+                                        <audio id="errorSound" src="static/sounds/notify.mp3" preload="auto"></audio>
                                         <script>
                                             document.getElementById('errorSound').play();
                                         </script>
