--- a/ServerFlask/templates/signup.html
+++ b/ServerFlask/templates/signup.html
@@ -78,11 +78,15 @@
 												</form>
 												{% with messages = get_flashed_messages(with_categories=true) %}
 													{% if messages %}
-														<div id="error" style="color: red; font-size: 20px;">
+														<div id="error" style="color: red; font-size: 20px;font-weight: bold;position: relative; top: -80px; left: 350px;">
 															{% for category, message in messages %}
 																<p>{{ message }}</p>
 															{% endfor %}
 														</div>
+														<audio id="errorSound" src="static/sounds/notify.mp3" preload="auto"></audio>
+														<script>
+															document.getElementById('errorSound').play();
+														</script>
 													{% endif %}
 												{% endwith %}
 											</section>
