--- a/ServerFlask/templates/login.html
+++ b/ServerFlask/templates/login.html
@@ -9,6 +9,15 @@
 </head>
 <body style="background-color: #DEEAF6;">
     <div id="wrapper" class="divided">
+        <!-- Home Button -->
+        <div style="position: absolute; top: 10px; right: 10px;">
+            <form method="post" action="/">
+                <button type="submit" class="button small" style="font-family: monospace; font-size: 16px; color: #1B1154; background-color: #F6F8F8;">
+                    Home
+                </button>
+            </form>
+        </div>
+
         <section class="wrapper style1 align-center">
             <div class="inner">
                 <h1 style="color: #1B1154; font-family: Arial; font-size: 100px">Login</h1>
