--- a/ServerFlask/templates/signup.html
+++ b/ServerFlask/templates/signup.html
@@ -29,6 +29,14 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
+				<!-- Home Button -->
+				<div style="position: absolute; top: 10px; right: 10px;">
+					<form method="post" action="/">
+						<button type="submit" class="button small" style="font-family: monospace; font-size: 16px; color: #1B1154; background-color: #F6F8F8;">
+							Home
+						</button>
+					</form>
+				</div>
 
 				<!-- Additional Elements -->
 				<section class="wrapper style1 align-center">
