--- a/ServerFlask/templates/login.html
+++ b/ServerFlask/templates/login.html
@@ -51,7 +51,7 @@
                                                 <div class="message error" style="color: red; font-size: 20px; font-weight: bold; position: relative; top: -80px; left: 350px;">
                                                     <p>{{ message }}</p>
                                                 </div>
-                                                <audio id="errorSound" src="static/sounds/notify.mp3" preload="auto"></audio>
+                                                <audio id="errorSound" src="static/sounds/error.mp3" preload="auto"></audio>
                                             {% elif category == 'notify' %}
                                                 <div class="message notify" style="color: green; font-size: 20px; font-weight: bold; position: relative; top: -80px; left: 350px;">
                                                     <p>{{ message }}</p>
